# Xiqu-Resource-Platform

./: .commitlintrc.js  .eslintignore  .eslintrc.js  .prettierrc.json  COPYING  README.md  auto-imports.d.ts  components.d.ts  index.html  package.json  pnpm-lock.yaml  postcss.config.js  splashscreen.html  stylelint.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
.husky/: commit-msg
src/: App.vue  env.d.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/api/: requests.ts  types.ts  useHttp.ts  userApi.ts
src/assets/css/: _global.css  index.css
src/assets/font/: font.css
src/components/: HelloWorld.vue
src/components/about/: AboutAuthor.vue  AboutDependence.vue  AboutJingjuSingingStyleCollection.vue  AboutPlatform.vue
src/components/action/: Action.vue  ChangeJingjuInfo.vue  ChangeUserInfo.vue  ChangeUserJurisdiction.vue  ChangeUserPassword.vue  DeleteUser.vue  ShowJingjuInfo.vue
src/components/common/: AdminCardBox.vue  AppIcon.vue  Breadcrumb.vue
src/components/messageboard/: CommentBox.vue  CommentItem.vue  DividerHorizontal.vue  ReplyBox.vue  ReplyContainer.vue
src/pages/: Admin.vue  Home.vue  Login.vue  Register.vue  Test.vue
src/pages/admin/: About.vue  Dashboard.vue  JingjuList.vue  JingjuSingingStyleCollection.vue  UserJurisdiction.vue  UserList.vue
src/pages/front/: About.vue  Dramascript.vue  Jingju.vue  MessageBoard.vue
src/pages/front/Dramascript/: Jingju.vue  PeakingOpera.vue
src/router/: index.ts
src/router/module/: admin.ts  common.ts  front.ts
src/store/module/: useCountStore.ts  useUserStore.ts
src/utils/: api.ts  clearlocalStorage.ts  dataURItoBlob.ts  keys.ts
