[package]
name = "app"
version = "0.1.1"
description = "A Tauri App"
authors = ["Yancy Qi"]
license = "AGPL-3.0-or-later"
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.7", features = [] }

[dependencies]
serde_json = "1.0.81"
serde = { version = "1.0.137", features = ["derive"] }
tauri = { version = "1.0.0-rc.8", features = ["api-all"] }
tauri-bundler = "1.0.0-rc.5"

# Tauri Removed the `useBootstrapper` option. So use https://github.com/tauri-apps/fix-path-env-rs instead.

[dependencies.fix-path-env]
git = "https://github.com/tauri-apps/fix-path-env-rs"
#tag = "fix-path-env-v0.1.0"
#branch = "dev"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
